--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img src="./assets/images/birthday.jpg" alt="birthday invite page screenshot" height="300px" width="400px">
     <br>
     <h3>
-        <a href="./public/movie-ranking.html">About Me</a>
+        <a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
     </h3>
 </body>
